# pyasm6502

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ACME_vs_pyasm6502_Comparison_Report.md  HISTORY.md  REFERENCE.md
pyasm6502/: __init__.py  asm6502.py  assembler.py
pyasm6502/package/: conditionals.py  constants.py  datastructures.py  debug.py  directives.py  evaluator.py  filesystem.py  loops.py  macros.py  output.py  segments.py  text_conversion.py  tokenizer.py
tests/: README.md  check_acme_compatibility.py  quick_test.py  run_tests.py
